fix overflow in 3up

--- a/3up/RootNodeView.styl
+++ b/3up/RootNodeView.styl
@@ -3,6 +3,8 @@
 
 .RootNodeView
   position relative
+  > :not(.swap)
+    max-height 100%
   .swap
     position absolute
     left 0
